Fixed searchbar alignment

--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -5,6 +5,8 @@
 }
 .header {
   background-image: url('../assets/bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #fff;
   padding: 1rem 0 3rem 0;
   border-bottom-left-radius: 40px;
