--- a/src/Styles/loader.css
+++ b/src/Styles/loader.css
@@ -6,12 +6,12 @@
   border-left: 2px rgb(90, 90, 211) solid;
   border-right: 2px transparent solid;
   animation: loading 0.8s linear infinite;
-  text-align: center;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  margin-left: -5rem;
-  margin-top: -5rem;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: fixed;
 }
 
 @keyframes loading {
