--- a/src/Styles/searchbar.css
+++ b/src/Styles/searchbar.css
@@ -8,6 +8,7 @@
   grid-gap: 2px;
   background-color: #f1f6f9;
   border-radius: 7px;
+  justify-content: center;
 }
 .search i {
   color: rgb(90, 90, 211);
@@ -36,7 +37,7 @@
   outline: none;
   border: none;
   padding: 1rem;
-  background-color: transparent; /*change*/
+  background-color: transparent;
   color: inherit;
 }
 
@@ -58,14 +59,14 @@
     grid-template-columns: repeat(3, 1fr);
   }
 }
-@media (max-width: 800px) {
+
+@media (max-width: 1010px) {
   .searchbar-container {
     width: 60%;
   }
 
   .search {
     grid-template-columns: 1fr;
-    /* grid-template-rows: repeat(3, minmax(52px, auto)); */
   }
   .s-left,
   .s-middle,
